test: Add widget tests and improve test architecture
- Adds comprehensive widget tests for grabber rendering and snap animations, achieving 92.7% test coverage.
- Redesigns the test directory structure for better maintainability and scalability.
- Updates the minimum required SDK versions to Dart >=3.0.0 and Flutter >=3.0.0 for compatibility with modern development tools.
- Updates documentation (README, CHANGELOG) to reflect these changes.
- Adds Git workflow and TDD guidelines to GEMINI.md.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: grabber_sheet
 description: "A reusable and customizable draggable bottom sheet with a grabber handle, inspired by the modal sheets in popular apps."
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/SangWook16074/grabber_sheet
 repository: https://github.com/SangWook16074/grabber_sheet.git
 issue_tracker: https://github.com/SangWook16074/grabber_sheet/issues
 
 environment:
-  sdk: ^3.10.0
-  flutter: ">=1.17.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
