--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,8 +3,8 @@ name: Publish to pub.dev
 
 on:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*' # Match tags like v1.0.0, v2.3.4, v3.0.0-alpha
+    branches:
+      - 'main' # main 브랜치에 푸시될 때만 워크플로우 실행
   workflow_dispatch: # Allows manual triggering of the workflow
 
 jobs:
