--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,13 @@ jobs:
       # 6. Publish to pub.dev
       #    The secret `PUB_DEV_CREDENTIALS` needs to be configured in GitHub repository settings.
       #    It contains the JSON content from the pub.dev credentials file.
+
+      - name: Format Package
+        run: dart format .
+
+      - name: Run Dry run
+        run: flutter pub publish --dry-run
+
       - name: Publish to pub.dev
         run: flutter pub publish --force
         env:
