--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: grabber_sheet
-description: "A draggable bottom sheet solving gesture conflicts. Features an independent grabber, smooth snapping, and seamless scrolling. The ultimate DraggableScrollableSheet alternative."
+description: "A customizable draggable bottom sheet inspired by modal sheets in popular apps. Solves gesture conflicts with an independent grabber and smooth snapping. The ultimate DraggableScrollableSheet alternative."
 topics:
   - bottom-sheet
   - draggable-sheet
   - grabber
   - ui-ux
   - scrolling
-version: 1.1.2
+version: 1.1.3
 homepage: https://github.com/SangWook16074/grabber_sheet
 repository: https://github.com/SangWook16074/grabber_sheet.git
 issue_tracker: https://github.com/SangWook16074/grabber_sheet/issues
